# amogus2

./: CMakeLists.txt
app_client/: CMakeLists.txt  HealthBar.h  Keys.txt  animations.h  bullet.h  entity.h  game.h  loot.h  main.cpp  map.h  menu.h  player.h
app_conf/: app_conf.h
app_server/: CMakeLists.txt  server.c  server.h
